--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^6.1.1",
     "react-scripts": "5.0.0",
     "react-slider": "^1.3.1",
+    "styled-components": "^5.3.3",
     "swiper": "^8.0.6",
     "web-vitals": "^2.1.2"
   },
