--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.15.1",
     "react-router-dom": "^6.1.1",
     "react-scripts": "5.0.0",
     "react-slider": "^1.3.1",
